# swagger.json
@@ -174,6 +174,112 @@
                 }],
                 "operationId": "ProductController.ProductKey"
             }
+        },
+
+        "/product/data-insert": {
+            "get": {
+                "x-controller-name": "ProductController",
+                "x-operation-name": "DataInserter",
+                "tags": ["ProductController"],
+                "security": [{
+                    "jwt": []
+                }],
+                "responses": {
+                    "200": {
+                        "description": "DataInserter",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {}
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [{
+                    "name": "Host",
+                    "in": "query",
+                    "schema": {
+                        "type": "string"
+                    }
+                }, {
+                    "name": "Product_Url",
+                    "in": "query",
+                    "schema": {
+                        "type": "string"
+                    }
+                }, {
+                    "name": "Product_Title",
+                    "in": "query",
+                    "schema": {
+                        "type": "string"
+                    }
+                }, {
+                    "name": "Img_url",
+                    "in": "query",
+                    "schema": {
+                        "type": "string"
+                    }
+                }, {
+                    "name": "SellPrice",
+                    "in": "query",
+                    "schema": {
+                        "type": "string"
+                    }
+                }],
+                "operationId": "ProductController.DataInserter"
+            }
+        },
+        "/product/data-insert-post": {
+            "post": {
+                "x-controller-name": "ProductController",
+                "x-operation-name": "DataInserterPost",
+                "tags": ["ProductController"],
+                "security": [{
+                    "jwt": []
+                }],
+                "responses": {
+                    "200": {
+                        "description": "DataInserterPost",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {}
+                                }
+                            }
+                        }
+                    }
+                },
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "Host": {
+                                        "type": "string"
+                                    },
+                                    "Product_Url": {
+                                        "type": "string"
+                                    },
+                                    "Product_Title": {
+                                        "type": "string"
+                                    },
+                                    "Img_url": {
+                                        "type": "string"
+                                    },
+                                    "SellPrice": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "operationId": "ProductController.DataInserterPost"
+            }
         }
     },
     "components": {},
